Fallback reducing volumn for template

--- a/prj-template/README.html
+++ b/prj-template/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-05-12 Sun 13:20 -->
+<!-- 2019-09-25 Wed 21:18 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Entropy-project template</title>
@@ -1158,15 +1158,14 @@ img
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org99b73b2">1. What is Entropy-project</a></li>
-<li><a href="#org18cd21b">2. Dir struct for Entropy-project</a></li>
-<li><a href="#orga39e7a8">3. Comprehensive dir struct view:</a></li>
-<li><a href="#org68cc400">4. How using this <code>Entropy-project</code> template:</a>
+<li><a href="#orge068b13">1. What is Entropy-project</a></li>
+<li><a href="#org1ae4c4e">2. Dir struct for Entropy-project</a></li>
+<li><a href="#org9867d45">3. Comprehensive dir struct view:</a></li>
+<li><a href="#org13c5684">4. How using this <code>Entropy-project</code> template:</a>
 <ul>
-<li><a href="#org4f3e0e1">4.1. Using entropy-emacs:</a></li>
-<li><a href="#orgca58c6f">4.2. Manually using</a></li>
-<li><a href="#org902ad27">4.3. Template index.org:</a></li>
-<li><a href="#orgcb4d5cc">4.4. Tips:</a></li>
+<li><a href="#org8b10a6f">4.1. Using entropy-emacs:</a></li>
+<li><a href="#org78c0c85">4.2. Manually using</a></li>
+<li><a href="#org12fff43">4.3. Template index.org:</a></li>
 </ul>
 </li>
 </ul>
@@ -1183,8 +1182,8 @@ img
 Entropy-project dir structor.</b>
 </p>
 
-<div id="outline-container-org99b73b2" class="outline-2">
-<h2 id="org99b73b2"><span class="section-number-2">1</span> What is Entropy-project</h2>
+<div id="outline-container-orge068b13" class="outline-2">
+<h2 id="orge068b13"><span class="section-number-2">1</span> What is Entropy-project</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 For widely concept, Entropy-project reconganizes each project as one
@@ -1200,8 +1199,8 @@ as for it.
 </div>
 </div>
 
-<div id="outline-container-org18cd21b" class="outline-2">
-<h2 id="org18cd21b"><span class="section-number-2">2</span> Dir struct for Entropy-project</h2>
+<div id="outline-container-org1ae4c4e" class="outline-2">
+<h2 id="org1ae4c4e"><span class="section-number-2">2</span> Dir struct for Entropy-project</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Whatever which project's natural meaning, each project must contained
@@ -1246,8 +1245,8 @@ current project folder, name of this folder as meaning what was
 </div>
 </div>
 
-<div id="outline-container-orga39e7a8" class="outline-2">
-<h2 id="orga39e7a8"><span class="section-number-2">3</span> Comprehensive dir struct view:</h2>
+<div id="outline-container-org9867d45" class="outline-2">
+<h2 id="org9867d45"><span class="section-number-2">3</span> Comprehensive dir struct view:</h2>
 <div class="outline-text-2" id="text-3">
 <pre class="example">
 .
@@ -1262,8 +1261,8 @@ current project folder, name of this folder as meaning what was
 </div>
 </div>
 
-<div id="outline-container-org68cc400" class="outline-2">
-<h2 id="org68cc400"><span class="section-number-2">4</span> How using this <code>Entropy-project</code> template:</h2>
+<div id="outline-container-org13c5684" class="outline-2">
+<h2 id="org13c5684"><span class="section-number-2">4</span> How using this <code>Entropy-project</code> template:</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Basically, this template is folder based without any actually
@@ -1272,8 +1271,8 @@ one recommended to you.
 </p>
 </div>
 
-<div id="outline-container-org4f3e0e1" class="outline-3">
-<h3 id="org4f3e0e1"><span class="section-number-3">4.1</span> Using <a href="https://github.com/c0001/entropy-emacs">entropy-emacs</a>:</h3>
+<div id="outline-container-org8b10a6f" class="outline-3">
+<h3 id="org8b10a6f"><span class="section-number-3">4.1</span> Using <a href="https://github.com/c0001/entropy-emacs">entropy-emacs</a>:</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 <a href="https://github.com/c0001/entropy-emacs">Entropy-emacs</a> was the emacs configs of my own but not limit for
@@ -1298,8 +1297,8 @@ default new-adding created form.
 </div>
 </div>
 
-<div id="outline-container-orgca58c6f" class="outline-3">
-<h3 id="orgca58c6f"><span class="section-number-3">4.2</span> Manually using</h3>
+<div id="outline-container-org78c0c85" class="outline-3">
+<h3 id="org78c0c85"><span class="section-number-3">4.2</span> Manually using</h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 For using this <code>Entropy-project</code> manually just copy it to wherever you
@@ -1308,25 +1307,25 @@ wanted.
 </div>
 </div>
 
-<div id="outline-container-org902ad27" class="outline-3">
-<h3 id="org902ad27"><span class="section-number-3">4.3</span> Template <a href="org/index.html">index.org</a>:</h3>
+<div id="outline-container-org12fff43" class="outline-3">
+<h3 id="org12fff43"><span class="section-number-3">4.3</span> Template <a href="org/index.html">index.org</a>:</h3>
 <div class="outline-text-3" id="text-4-3">
 <p>
 This is the only template file of this template folder, as what you
 seeing, it's a org file with default template header insert:
 </p>
 <div class="org-src-container">
-<pre class="src src-org"><span style="color: #555556;"># -*- mode: org; -*-</span>
-<span style="color: #555556;">#+TITLE:</span> <span style="color: #fd971f; font-weight: bold;">xxx</span>
-<span style="color: #555556;">#+AUTHOR:</span> <span style="color: #fd971f;">xxx</span>
-<span style="color: #555556;">#+EMAIL:</span> <span style="color: #fd971f;">xxx@xxx.com</span>
-<span style="color: #7f7f80;">#+OPTIONS:   H:3 num:t   toc:3 \n:nil </span><span style="color: #66d9ef;">@:t</span><span style="color: #7f7f80;"> ::t |:t ^:nil -:t f:t *:t &lt;:nil</span>
-<span style="color: #7f7f80;">#+OPTIONS:   author:t creator:t timestamp:t email:t</span>
-<span style="color: #7f7f80;">#+DESCRIPTION: Put this org file description here</span>
-<span style="color: #7f7f80;">#+KEYWORDS:  key1 key2 key3 key4</span>
-<span style="color: #7f7f80;">#+INFOJS_OPT: view:nil toc:t ltoc:t mouse:underline buttons:0 path:<a href="http://orgmode.org/org-info.js">http://orgmode.org/org-info.js</a></span>
-<span style="color: #7f7f80;">#+EXPORT_SELECT_TAGS: export</span>
-<span style="color: #7f7f80;">#+EXPORT_EXCLUDE_TAGS: noexport</span>
+<pre class="src src-org"><span style="color: #5B6268;"># -*- mode: org; -*-</span>
+<span style="color: #5B6268;">#+TITLE:</span> <span style="color: #c678dd; font-weight: bold;">xxx</span>
+<span style="color: #5B6268;">#+AUTHOR:</span> <span style="color: #c678dd;">xxx</span>
+<span style="color: #5B6268;">#+EMAIL:</span> <span style="color: #c678dd;">xxx@xxx.com</span>
+<span style="color: #83898d;">#+OPTIONS:   H:3 num:t   toc:3 \n:nil </span><span style="color: #46D9FF;">@:t</span><span style="color: #83898d;"> ::t |:t ^:nil -:t f:t *:t &lt;:nil</span>
+<span style="color: #83898d;">#+OPTIONS:   author:t creator:t timestamp:t email:t</span>
+<span style="color: #83898d;">#+DESCRIPTION: Put this org file description here</span>
+<span style="color: #83898d;">#+KEYWORDS:  key1 key2 key3 key4</span>
+<span style="color: #83898d;">#+INFOJS_OPT: view:nil toc:t ltoc:t mouse:underline buttons:0 path:<a href="http://orgmode.org/org-info.js">http://orgmode.org/org-info.js</a></span>
+<span style="color: #83898d;">#+EXPORT_SELECT_TAGS: export</span>
+<span style="color: #83898d;">#+EXPORT_EXCLUDE_TAGS: noexport</span>
 </pre>
 </div>
 
@@ -1341,24 +1340,11 @@ Each header keys meaning you can check the org-mode manual section
 </p>
 </div>
 </div>
-
-
-<div id="outline-container-orgcb4d5cc" class="outline-3">
-<h3 id="orgcb4d5cc"><span class="section-number-3">4.4</span> Tips:</h3>
-<div class="outline-text-3" id="text-4-4">
-<p>
-You can learn about how to using emacs and org-mode for read the doc
-under <a href="Org-Mode-Introduction/">Org-Mode-Introduction</a> folder. Each file under this folder was
-published both as org and html file that you can read them without
-open emacs as just using the system browser.
-</p>
-</div>
-</div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Entropy</p>
-<p class="date">Created: 2019-05-12 Sun 13:20</p>
+<p class="date">Created: 2019-09-25 Wed 21:18</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
