Remove unsugguested directly used for `read-only-mode'

--- a/elements/site-lisp/entropy-emacs-doc/org/entropy-emacs_introduction.html
+++ b/elements/site-lisp/entropy-emacs-doc/org/entropy-emacs_introduction.html
@@ -3082,7 +3082,7 @@ want to do so , calling it.
 <p>
 Capture patching redefining func <code>org-capture-place-template</code> and the
 Org-mode internal unit <code>org-datetree--find-create</code>, both patching for
-them are minor just with adding <code>(read-only-mode 0)</code> to the key coding
+them are minor just with adding <code>(setq buffer-read-only nil)</code> to the key coding
 region.
 </p>
 
